--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -996,7 +996,7 @@ year = {2019}
 @article{andonova2009transnational,
   title={{Transnational Climate Governance}},
   author={Andonova, Liliana B and Betsill, Michele M and Bulkeley, Harriet},
-  journal={Global environmental politics},
+  journal={Global Environmental Politics},
   volume={9},
   number={2},
   pages={52--73},
@@ -1126,3 +1126,35 @@ year = {2019}
   publisher={Cambridge University Press}
 }
 
+@article{pullman1999comparison,
+  title={{A Comparison of Conjoint Methods When There Are Many Attributes}},
+  author={Pullman, Madeleine E and Dodson, Kimberly J and Moore, William L},
+  journal={Marketing Letters},
+  volume={10},
+  number={2},
+  pages={125--138},
+  year={1999},
+  publisher={Springer}
+}
+
+@article{lines2004information,
+  title={{Information Overload in Conjoint Experiments}},
+  author={Lines, Rune and Denstadli, Jon M},
+  journal={International Journal of Market Research},
+  volume={46},
+  number={3},
+  pages={297--310},
+  year={2004},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@misc{freire2020replication,
+  author = {Danilo Freire and Umberto Mignozzetti and David Skarbek},
+  publisher = {Harvard Dataverse},
+  title = {{Replication Data for: Institutional Design and Elite Support for Climate Policies: Evidence from Latin American Countries}},
+  UNF = {UNF:6:p2yzEbo3pQYLfP6BlSvT3w==},
+  year = {2020},
+  version = {V1},
+  doi = {10.7910/DVN/MIIXNG},
+  url = {https://doi.org/10.7910/DVN/MIIXNG}
+}
