--- a/supplementary-material/references.bib
+++ b/supplementary-material/references.bib
@@ -1,19 +1,27 @@
 %%% References
 
-@article{santos2017global,
-  title={Global justice and environmental governance: an analysis of the Paris Agreement},
-  author={Santos, Marcelo},
-  journal={Revista Brasileira de Pol{\'\i}tica Internacional},
-  volume={60},
-  number={1},
-  year={2017},
-  publisher={SciELO Brasil}
-}
-
 @misc{strezhnev2013conjoint,
   title={{Conjoint Survey Design Tool: Software Manual}},
   author={Strezhnev, Anton and Hainmueller, Jens and Hopkins, Daniel J and Yamamoto, Teppei},
   year={2013}
+}
+
+@unpublished{grillos2019deliberative,
+  title={Deliberative Decision-Making and the Public Good: A Behavioral Lab Experiment in Kenya},
+  author={Grillos, Tara},
+  year={2019},
+  url={http://dlc.dlib.indiana.edu/dlc/handle/10535/10523}
+}
+
+@article{aga2018project,
+  title={Project beneficiary participation and behavioural intentions promoting project sustainability: The mediating role of psychological ownership},
+  author={Aga, Deribe Assefa and Noorderhaven, Niels and Vallejo, B},
+  journal={Development Policy Review},
+  volume={36},
+  number={5},
+  pages={527--546},
+  year={2018},
+  publisher={Wiley Online Library}
 }
 
 @article{jordan2015emergence,
@@ -115,37 +123,6 @@
   publisher={Springer}
 }
 
-@article{pigrau2014texaco, 
-author = {Pigrau, Sole}, 
-title = {The Texaco-Chevron case in Ecuador: Law and justice in the age of globalization}, 
-journal = {Revista Catalana de Dret Ambiental}, 
-volume = {5}, 
-number = {1}, 
-pages = {1-43},  
-url = {https://www.raco.cat/index.php/rcda/article/view/280972}, 
-year = {2014}
-} 
-
-@article{bruhl2001international,
-  title={From international to global governance: Actors, collective decision-making, and the United Nations in the world of the twenty-first century},
-  author={Br{\"u}hl, Tanja and Rittberger, Volker},
-  journal={Global governance and the United Nations system},
-  volume={1},
-  pages={21--22},
-  year={2001},
-  publisher={United Nations University Press: Tokyo, New York, Paris}
-}
-
-@article{finnemore1998international, 
-author = {Finnemore, Martha and Sikkink, Kathryn}, 
-title = {International norms dynamics and political change}, 
-journal = {Critique internationale}, 
-volume = {1}, 
-number = {54}, 
-pages = {889-909}, 
-year = {1998}
-}  
-
 @article{ostrom2014polycentric,
   title={{A Polycentric Approach for Coping with Climate Change}},
   author={Ostrom, Elinor},
@@ -190,28 +167,6 @@ year = {1998}
   pages={399},
   year={2013},
   publisher={Nature Publishing Group}
-}
-
-@article{bellier2012peuples,
-  title={Les peuples autochtones aux Nations Unies: un nouvel acteur dans la fabrique des normes internationales},
-  author={Bellier, Ir{\`e}ne},
-  journal={Critique internationale},
-  number={54},
-	volume={1},
-  pages={61--80},
-  year={2012},
-  publisher={Presses de Sciences Po}
-}
-
-@article{biesbroek2018public,
-  title={Public bureaucracy and climate change adaptation},
-  author={Biesbroek, Robbert and Peters, B Guy and Tosun, Jale},
-  journal={Review of Policy Research},
-  volume={35},
-  number={6},
-  pages={776--791},
-  year={2018},
-  publisher={Wiley Online Library}
 }
 
 @article{hornsey2016meta,
@@ -300,24 +255,6 @@ year = {1998}
   publisher={National Acad Sciences}
 }
 
-@article{fraundorfer2017role,
-  title={The Role of Cities in Shaping Transnational Law in Climate Governance},
-  author={Fraundorfer, Markus},
-  journal={Global Policy},
-  volume={8},
-  number={1},
-  pages={23--31},
-  year={2017},
-  publisher={Wiley Online Library}
-}
-
-@book{barber2013if,
-  title={If mayors ruled the world: Dysfunctional nations, rising cities},
-  author={Barber, Benjamin R},
-  year={2013},
-  publisher={Yale University Press}
-}
-
 @article{barrett2003increasing,
   title={{Increasing Participation and Compliance in International Climate Change Agreements}},
   author={Barrett, Scott and Stavins, Robert},
@@ -336,17 +273,6 @@ year = {1998}
   year={2017},
   publisher={Wiley Online Library}
 }
-
-@article{almer2010environmental,
- author = {Christian Almer and Timo Goeschl},
- journal = {Land Economics},
- number = {4},
- pages = {707--726},
- publisher = {[Board of Regents of the University of Wisconsin System, University of Wisconsin Press]},
- title = {Environmental Crime and Punishment: Empirical Evidence from the German Penal Code},
- volume = {86},
- year = {2010}
-} 
 
 @article{hjerpe2015views,
   title={{Views on Alternative Forums for Effectively Tackling Climate Change}},
@@ -368,24 +294,6 @@ year = {1998}
   pages={615--621},
   year={2010},
   publisher={Taylor \& Francis}
-}
-
-@article{dimitrov2005hostage,
-  title={Hostage to norms: states, institutions and global forest politics},
-  author={Dimitrov, Radoslav S},
-  journal={Global environmental politics},
-  volume={5},
-  number={4},
-  pages={1--24},
-  year={2005},
-  publisher={MIT Press}
-}
-
-@book{keohane2012power,
-title={Power and Interdependence},
-author={Keohane, Robert and Nye, Joseph},
-year={2012},
-publisher={Harvard University Press}
 }
 
 @article{de2014global,
@@ -534,21 +442,6 @@ year = {2019}
   pages={433--457},
   year={2009},
   publisher={JSTOR}
-}
-
-@book{kartha2011comparison,
-  title={Comparison of Annex 1 and non-Annex 1 pledges under the Cancun Agreements},
-  author={Kartha, Sivan and Erickson, Peter},
-  year={2011},
-  publisher={Stockholm Environment Institute.}
-}
-
-@book{simons2002handbook,
-title={Handbook of international relations},
-author={Simons, Beth and Martin, Lisa},
-pages = {192-211},  
-year={2002},
-publisher={SAGE Publications}
 }
 
 @misc{leeper2018cregg,
