Add Dataverse reference

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1152,9 +1152,8 @@ year = {2019}
   author = {Danilo Freire and Umberto Mignozzetti and David Skarbek},
   publisher = {Harvard Dataverse},
   title = {{Replication Data for: Institutional Design and Elite Support for Climate Policies: Evidence from Latin American Countries}},
-  UNF = {UNF:6:p2yzEbo3pQYLfP6BlSvT3w==},
   year = {2020},
   version = {V1},
-  doi = {10.7910/DVN/MIIXNG},
-  url = {https://doi.org/10.7910/DVN/MIIXNG}
+  doi = {10.7910/DVN/VTA5OA},
+  howpublished = {\url{https://doi.org/10.7910/DVN/VTA5OA}}
 }
